# GameTracker

./: .gitignore  CMakeLists.txt  README.md
GameTracker/: CMakeLists.txt  database.cpp  database.h  main.cpp
